Add taxi forest to portfolio

--- a/index.html
+++ b/index.html
@@ -142,6 +142,22 @@
                         </div>
                     </div>
                 </div>
+                <!-- Project Three Row-->
+                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/renardo.png" alt="..." /></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Taxi Forest</h4>
+                                    <p class="mb-0 text-white-50">A little driving roguelike game, where you have to take customers to their destination and improve your car to score the most points.</p>
+                                    <br>
+                                    <a class="btn btn-primary" href="https://wizardoux.itch.io/taxi-forest">Try Taxi Forest</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Footer-->
